<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrazione">

    <TextView
        android:id="@+id/saluto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/saluto"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saluto">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:background="@drawable/forma_pulsante"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:paddingLeft="26dp" />

        <TextView
            android:id="@+id/reqNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/required"

            />

        <EditText
            android:id="@+id/editCognome"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:background="@drawable/forma_pulsante"
            android:ems="10"
            android:hint="@string/cogmone"
            android:inputType="textPersonName"
            android:paddingLeft="26dp" />

        <TextView
            android:id="@+id/reqCognome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/required"

            />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:background="@drawable/forma_pulsante"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="26dp" />

        <TextView
            android:id="@+id/reqEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/required"

            />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:background="@drawable/forma_pulsante"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="26dp" />

        <TextView
            android:id="@+id/reqPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Maschio" />

            <RadioButton
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Femmina" />
        </LinearLayout>

        <TextView
            android:id="@+id/reqGenere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="text" />
    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_pulsante"
        android:hint="@string/registrazione"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:text="@string/registrazione"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>