<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Abbigliamento"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">


            <EditText
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="56dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/forma_pulsante"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingLeft="26dp" />


            <TextView
                android:id="@+id/reqEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/required" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="280dp"
                android:layout_height="56dp"
                android:background="@drawable/forma_pulsante"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp" />


            <TextView
                android:id="@+id/reqPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/required" />

            <Button
                android:id="@+id/passwordDimenticata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03FFFFFF"
                android:foregroundGravity="right"
                android:gravity="right"
                android:linksClickable="true"
                android:minHeight="24dip"
                android:paddingTop="10dp"
                android:text="@string/passwordDimenticata"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#3F51B5"
                android:textIsSelectable="true"
                android:textStyle="bold"

                />


        </LinearLayout>

        <CheckBox
            android:id="@+id/ricorda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Ricorda"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:background="@drawable/forma_pulsante"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ricorda"
            app:layout_constraintBottom_toTopOf="@id/registrazione"/>

        <Button
            android:id="@+id/registrazione"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:background="#03FFFFFF"
            android:text="@string/registrazione"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>